--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-
-
-<% @posts.inspect %>
-ruby
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<h2>Blog Posts</h2>
 <%= @posts.inspect %>
+
+<h2>Skills</h2>
+<%= @skills.inspect %>
