--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,5 +4,9 @@
     <p><%= portfolio_item.title %></p>
     <p><%= portfolio_item.subtitle %></p>
     <p><%= portfolio_item.body %></p>
-    <p><%= image_tag portfolio_item.thumb_image %></p>
+    <%#= image_tag portfolio_item.thumb_image %>
 <% end %>
+
+
+
+
