--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,8 +7,9 @@
     <p><%= portfolio_item.title %></p>
     <p><%= portfolio_item.subtitle %></p>
     <p><%= portfolio_item.body %></p>
-    <%#= image_tag portfolio_item.thumb_image %>
+    <%= image_tag portfolio_item.thumb_image %>
     <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+    <%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 
 
