--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @blogs.each do |blog| %>
       <tr>
-        <td><%= blog.title %></td>
+        <td><%= blog.title.upcase%></td>
         <td><%= blog.body %></td>
         <td><%= blog.status %></td>
         <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
