--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to "Create New Item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
+<% @portfolio_item.each do |portfolio_item| %>
     <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%></p>
     <p><%= portfolio_item.title %></p>
     <p><%= portfolio_item.subtitle %></p>
