--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,9 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    
+    <% if session[:source] %>
+      <p>Thanks for visting me from <%= session[:source] %></p>
+    <% end %>
   </body>
 </html>
