--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="Keywords" content="<%= @seo_keywords %>" />
   </head>
@@ -16,8 +16,6 @@
       <div><%= link_to "Home", root_path %></div>
       <div><%= link_to "About", about_path %></div>
       <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %></div>
-      <div><%= link_to "Portfolio", portfolios_path %></div>
     </div>
     
     <% if current_user.is_a?(User) %>
@@ -28,6 +26,11 @@
     <% end %>
     
     <%= yield %>
+    
+    <div>
+      <div><%= link_to "Blog", blogs_path %></div>
+      <div><%= link_to "Portfolio", portfolios_path %></div>
+    </div>
     
     <% if session[:source] %>
       <p>Thanks for visting me from <%= session[:source] %></p>
