--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-    background-color: black;
+    background-color: yellow;
     color: white;
+}
+
+.top a {
+    color: blue;
 }
