--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,6 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav" %>
       
     <% if current_user.is_a?(User) %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
@@ -22,6 +21,8 @@
     <% end %>
     
     <%= yield %>
+    
+    <%= render "shared/nav",  location: 'bottom' %>
     
     <% if session[:source] %>
       <p>Thanks for visting me from <%= session[:source] %></p>
