--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,23 +1,3 @@
 <h1>Edit this Portfolio Item</h1>
 
-<%= form_with(model: @portfolio_item, local: true) do |form| %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :@portfolio_item_title %>
-  </div>
-  
-  <div class="field">
-      <%= form.label :subtitle %>
-      <%= form.text_field :subtitle, id: :@portfolio_item_subtitle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :@portfolio_item_body %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= render 'form', portfolio_item: @portfolio_item %>
