--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,8 +19,7 @@
     
     <%= render "shared/nav",  location: 'bottom' %>
     
-    <% if session[:source] %>
-      <p>Thanks for visting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("Blog") %>
+    
   </body>
 </html>
