--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -18,8 +18,7 @@
     
     <%= yield %>
     
-    <% if session[:source] %>
-      <p>Thanks for visting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("Portfolio") %>
+    
   </body>
 </html>
