Updated styles for the master layout file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,24 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    
-    <%= render "shared/nav",  location: 'top' %>
-    
-    <%= login_helper %>
-    
-    <%= yield %>
-    
-    <%= @copyright %>
-    
-    <%= source_helper("Application") %>
-    
+    <div class="site-wrapper">
+  
+      <div class="site-wrapper-inner">
+  
+        <div class="cover-container">
+      
+            <%= render "shared/application_nav" %>
+            
+            <%= login_helper %>
+            
+            <%= yield %>
+            
+            <%= @copyright %>
+            
+            <%= source_helper("Application") %>
+        </div>
+      </div>
+    </div>
+          
   </body>
 </html>
