Implemented the designs for blog index

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,8 +16,9 @@
     
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
     
@@ -58,7 +59,7 @@
             </ol>
           </div>
         </div>
-        
+      </div>
         
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -66,11 +67,8 @@
             <a href="#">Back to top</a>
           </p>
         </footer>
-    <%= render "shared/nav",  location: 'bottom' %>
     
     <%= source_helper("Blog") %>
-    
-      </div>
     </div>
   </body>
 </html>
