--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="col-sm-8 blog-main">
   <%= render @blogs %>
   
@@ -8,7 +6,7 @@
     <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
   </nav>
 
-</div><!-- /.blog-main -->
+</div>
 
 
 
