--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -20,12 +20,13 @@
             <li><a href="#">April 2013</a></li>
         </ol>
     </div>
-    <div class="sidebar-module">
+    <div class="sidebar-module social-links">
         <h4>Elsewhere</h4>
         <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="#"><%= fa_icon "github" %></a></li>
+            <li><a href="#"><%= fa_icon "instagram" %></a></li>
+            <li><a href="#"><%= fa_icon "facebook" %></a></li>
+            <li><a href="#"><%= fa_icon "twitter" %></a></li>
         </ol>
     </div>
 </div>
