--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,7 +1,9 @@
-    <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%></p>
-    <p><%= portfolio_item.title %></p>
-    <p><%= portfolio_item.subtitle %></p>
-    <p><%= portfolio_item.body %></p>
+<div class="card">
     <%= image_tag portfolio_item.thumb_image %>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-    <%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+    <p class="card-text">
+        <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%></span> <%= portfolio_item.subtitle %>
+    </p>
+</div>
+
+
+
