Implemented partials for navigation, masthead, and foote in the portfolio layout

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,4 +1,4 @@
- <div class="masthead clearfix">
+ <div class="masthead">
     <div class="inner">
         <h3 class="masthead-brand">Zabrina Larson</h3>
         <nav class="nav nav-masthead">
