--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,7 @@ body {
  */
 
 .masthead {
-  margin-bottom: 2rem;
+  margin-bottom: 5px;
 }
 
 .masthead-brand {
@@ -134,11 +134,9 @@ body {
 @media (min-width: 40em) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -164,6 +162,12 @@ body {
 /*
 * Custom Styles
 */
+
+#edit-card {
+  margin: 5% 15%;
+  width: 80%;
+  padding: 25px 15px 30px 15px;
+}
 
 .card-block {
   color: black;
