--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" id="edit-card">
   <div class="card-block">
     <div class="row">
       <div class="col-md-8">
@@ -53,7 +53,7 @@
     </div>
     
     <div class="auth-links">
-      <%= link_to "Back", :back %>
+      <%= link_to "Back", root_path %>
     </div>
     
   </div>
