Implemented show page styles for portfolio layout

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -3,26 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
     <title><%= @page_title %></title>
-    
     <%= csrf_meta_tags %>
+
+    <meta name="keywords" content="<%= @seo_keywords %>" />
+
     <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <meta name="Keywords" content="<%= @seo_keywords %>" />
   </head>
 
-  <body
-  
+  <body>
     <%= render 'shared/portfolio_nav' %>
-  
     <%= render 'shared/portfolio_masthead' %>
-    
+
     <%= yield %>
-    
+
     <%= render 'shared/portfolio_footer' %>
 
-    <%= source_helper("Portfolio") %>
-    
+    <%= source_helper("application") %>
   </body>
 </html>
