--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,7 +1,8 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-        <a href="#">Back to top</a>
+      <%= link_to "View All Portfolio Items", portfolios_path %> /
+      <a href="#">Back to top</a>
     </p>
     <p>
         <%= @copyright %>
