--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Create a new Portfolio item</h1>
-
-<%= render 'form', portfolio_item: @portfolio_item %>
+<div class="container portfolio-form">
+    
+    <h1>Create a new Portfolio item</h1>
+    
+    <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
