--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -10,6 +10,15 @@
           <%= form.label :subtitle %>
           <%= form.text_field :subtitle, id: :@portfolio_item_subtitle, class: 'form-control' %>
       </div>
+      
+      <div class="form-group">
+        <%= form.file_field :main_image %>
+      </div>
+      
+      <div class="form-group">
+        <%= form.file_field :thumb_image %>
+      </div>
+        
     </div>
     
     <div class="col-md-6">
