--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -12,11 +12,15 @@
       </div>
       
       <div class="form-group">
-        <%= form.file_field :main_image %>
+        <label class="btn btn-primary">
+           Upload main image file <%= form.file_field :main_image, style: 'display:none;' %>
+        </label>
       </div>
       
       <div class="form-group">
-        <%= form.file_field :thumb_image %>
+        <label class="btn btn-primary">
+           Upload thumb image file <%= form.file_field :thumb_image, style: 'display:none;' %>
+        </label>
       </div>
         
     </div>
