--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container portfolio-container">
     <div class="row">
         <div class="col-md-7">
-            <%= image_tag portfoilo_img(@portfolio_item.thumb_image, 'main'), width: '100%'  %>
+            <%= image_tag portfoilo_img(@portfolio_item.main_image, 'main'), width: '100%'  %>
         </div>
         
         <div class="col-md-5">
@@ -18,6 +18,12 @@
             
             <% @portfolio_item.technologies.each do |t| %>
             <p><%= t.name %></p>
+            <% end %>
+            
+            <% if logged_in?(:site_admin) %>
+                <div>
+                    <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-success' %>
+                </div>
             <% end %>
         </div>
     </div>
