--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
             
             <%= render "shared/application_footer" %>
             
+            <%= render "shared/alerts" %>
+            
             <%= source_helper("Application") %>
         </div>
       </div>
