Refractored alerts into helper method

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -26,6 +26,8 @@
       </div>
         
       <%= render 'shared/blog_footer' %>
+      
+      <%= alerts %>
        
       <%= source_helper("Application") %>
     </div>
