--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,7 +19,9 @@
     <%= yield %>
 
     <%= render 'shared/portfolio_footer' %>
-
+    
+    <%= alerts %>
+    
     <%= source_helper("application") %>
   </body>
 </html>
