--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,16 +5,7 @@
   
   <p><%= @blog.body %></p>
 
-  <%  unless current_user.is_a? GuestUser %>
-  	<%= form_for @comment, url: '#' do |f| %>
-  		<div class="form-group">
-  			<%= f.label :content %>
-  			<%= f.text_area :content, class:'form-control' %>
-  		</div>
-
-  		<%= f.submit 'Post Comment', class:'btn btn-success' %>
-  	<% end %>
-  <% end %>
+  <%= render 'comments/comment_form' %> 
 
   <%= render @blog.comments %>
 
