--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -20,6 +20,16 @@
             <li><a href="#">April 2013</a></li>
         </ol>
     </div>
+
+    <div class="sidebar-module">
+        <h4>Topics</h4>
+        <% @side_bar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %><p>
+        <% end %>
+    </div>
+
+
+
     <div class="sidebar-module social-links">
         <h4>Elsewhere</h4>
         <ol class="list-unstyled">
