--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,17 +1,29 @@
 <div class="col-sm-8 blog-main">
-  <h2><%= @blog.title %></h2>
+	<h2><%= @blog.title %></h2>
 
-  <p><%= @blog.topic.title %></p>
-  
-  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
-  
-  <p><%= markdown @blog.body %></p>
+	<nav class="breadcrumb">
+	<%= link_to 'Home', root_path, class: 'breadcrumb-item' %>
+	<%= link_to @blog.topic.title, topic_path(@blog.topic), class: 'breadcrumb-item' %>
+	<span class="breadcrumb-item active"><%= @blog.title %></span>
 
-  <%= render 'comments/comment_form' %> 
 
-  <div id="comments" data-blog-id=”<%= @blog.id %>>
-    <%= render @blog.comments %>
-  </div>
+	<span class="breadcrumb-icons">
+		<%= link_to fa_icon('pencil-square-o'), edit_blog_path(@blog) if logged_in?(:site_admin) %>
+		<%= link_to fa_icon('trash'), @blog, method: :delete, data: { confirm: 'Are you sure?' }  if logged_in?(:site_admin) %>
+	</span>
+	</nav>
+
+	<p><%= @blog.topic.title %></p>
+	  
+	<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
+	  
+	<p><%= markdown @blog.body %></p>
+
+	<%= render 'comments/comment_form' %> 
+
+	<div id="comments" data-blog-id=”<%= @blog.id %>>
+		<%= render @blog.comments %>
+	</div>
 
 </div>
 
