Implemented some changes to the blog nav

--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,8 +1,9 @@
-<div class="blog-masthead">
+<nav class="navbar blog-masthead">
     <div class="container">
-        <nav class="nav blog-nav">
+        <nav class="nav navbar-dark">
+        	<%= link_to 'Zabrina Larson', root_path, class: 'navbar-brand' %>
             <%= nav_helper 'nav-link', 'span' %>
             <%= login_helper 'nav-link' %>
         </nav>
     </div>
-</div>
+</nav>
