--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,6 +3,16 @@
         <h4>About</h4>
         <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
     </div>
+
+    <%= source_helper("alert alert-info blog-sidebar-source") %>
+
+    <div class="sidebar-module">
+        <h4>Topics</h4>
+        <% @side_bar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %><p>
+        <% end %>
+    </div>
+
     <div class="sidebar-module">
         <h4>Archives</h4>
         <ol class="list-unstyled">
@@ -20,15 +30,6 @@
             <li><a href="#">April 2013</a></li>
         </ol>
     </div>
-
-    <div class="sidebar-module">
-        <h4>Topics</h4>
-        <% @side_bar_topics.each do |topic| %>
-        <p><%= link_to topic.title, topic_path(topic) %><p>
-        <% end %>
-    </div>
-
-
 
     <div class="sidebar-module social-links">
         <h4>Elsewhere</h4>
