--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,24 +1,28 @@
-<h1>Lets Work Together!</h1>
+<div class="app-card-container">
+    <div class="card">
+        <h1>Lets Work Together!</h1>
 
-<hr>
+        <hr>
 
-<div class="row">
-    <div class="col-md-6">
-        <h3>Address</h3>
-        
-        <p>341 East 1500 South, Orem UT 84058</p>
-        
-        <h3>Phone</h3>
-        
-        <p><%= number_to_phone "8015973165" %></p>
-        
-        <h3>Email</h3>
-        
-        <p>zabrinalarson@gmail.com</p>
-        <p><a href="mailto:zabrinalarson@gmail.com?subject=Portfolio Contact" "email me">Email Me</a></p>
-    </div>
-    
-    <div class="col-md-6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.264870520242!2d-111.68873468521677!3d40.26986607248338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9a8a7b5953d1%3A0x909f94f91340d9e4!2s341+E+1500+S%2C+Orem%2C+UT+84058!5e0!3m2!1sen!2sus!4v1534044914824" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Address</h3>
+                
+                <p>341 East 1500 South, Orem UT 84058</p>
+                
+                <h3>Phone</h3>
+                
+                <p><%= number_to_phone "8015973165" %></p>
+                
+                <h3>Email</h3>
+                
+                <p>zabrinalarson@gmail.com</p>
+                <p><a href="mailto:zabrinalarson@gmail.com?subject=Portfolio Contact" "email me">Email Me</a></p>
+            </div>
+            
+            <div class="col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.264870520242!2d-111.68873468521677!3d40.26986607248338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9a8a7b5953d1%3A0x909f94f91340d9e4!2s341+E+1500+S%2C+Orem%2C+UT+84058!5e0!3m2!1sen!2sus!4v1534044914824" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
     </div>
 </div>
