--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,6 +9,50 @@
 		    <div class="col-md-8">
 		        <p>Find me in app/views/pages/about.html.erb"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 		        <p> other content "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+		        <p>
+		        	<button 
+		        		class="btn btn-primary"
+		        		type="button"
+		        		data-toggle="collapse"
+		        		data-target="#jobHistory"
+		        		aria-expanded="false"
+		        		aria-controller="jobHistory"
+		        	>
+		        	Job History
+		        	</button>
+
+		        	<button 
+		        		class="btn btn-primary"
+		        		type="button"
+		        		data-toggle="collapse"
+		        		data-target="#education"
+		        		aria-expanded="false"
+		        		aria-controller="jobHistory"
+		        	>
+		        	Education
+		        	</button>
+		        </p>
+
+		        <p>
+		        	<div class="collapse" id="jobHistory">
+		        		<div class="card card-block">
+		        			Example 1 
+		        		</div>
+		        		<div class="card card-block">
+		        			Example 2
+		        		</div>
+		        	</div>
+
+		        	<div class="collapse" id="education">
+		        		<div class="card card-block">
+		        			Example 1 
+		        		</div>
+		        		<div class="card card-block">
+		        			Example 2
+		        		</div>
+		        	</div>
+		        </p>
 		    </div>
 		</div>
 	</div>
