Added View Component for Skills

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,6 +5,23 @@
 		<div class="row">
 		    <div class="col-md-4">
 		        <%= image_tag "profile.jpg", width:300, alt:"Profile Image" %>
+		        <div class="skills">
+		        	<% @skills.each do |skill| %>
+		        		<div class="skill">
+		        			<h4><%= skill.title %></h4>
+			        		<div class="progress">
+				        		<div 
+				        			class="progress-bar progress-bar-striped bg-warning"
+				        			role="progressbar"
+				        			aria-valuenow="<%= skill.percent_utilized %>"
+				        			aria-valuefax="100"
+				        			style="width: <%= skill.percent_utilized %>%"
+				        			>
+				        		</div>
+				        	</div>
+		        		</div>
+		        	<% end %>
+		        </div>
 		    </div>
 		    <div class="col-md-8">
 		        <p>Find me in app/views/pages/about.html.erb"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
