--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,6 +2,7 @@
 @import "font-awesome";
 @import "gritter";
 
+
 /*
  * Globals
  */
@@ -13,7 +14,7 @@
 }
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Bree Serif";
   color: #555;
 }
 
@@ -23,7 +24,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Oswald";
   font-weight: normal;
   color: #333;
 }
