--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Oswald&display=swap" rel="stylesheet">
+
     
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
