--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,7 +4,17 @@
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
+  font-family: 'Bree Serif';
 }
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: "Oswald";
+  }
 
 .navbar {
   margin-bottom: 0;
