Fixed the headers on all layouts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,7 @@ h6, .h6 {
 
 .masthead {
   margin-bottom: 100px;
-  position: sticky;
+  position: fixed;
   top: 0;
 }
 
@@ -213,6 +213,7 @@ h6, .h6 {
   float: none;
 }
 
+
 .app-nav span {
   margin-left: 15px;
   margin-right: 15px;
@@ -264,7 +265,8 @@ h6, .h6 {
 }
 
 .app-card-container > .card {
-  padding: 40px
+  padding: 40px;
+  margin-top: 150px;
 }
 
 .app-card-container a {
