--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -15,8 +15,7 @@
   </head>
 
   <body>
-    <%= render 'shared/blog_nav' %>
-    
+    <%= render 'shared/portfolio_nav' %>
     <%= render 'shared/blog_masthead' %>
     
     <div class="container">
