--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -1,26 +1,28 @@
-<div class="collapse bg-inverse" id="navbarHeader">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 py-4">
-        <h4 class="text-white">About</h4>
-        <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-      </div>
-      <div class="col-sm-4 py-4">
-        <h4 class="text-white">Explore</h4>
-        <ul class="list-unstyled">
-            <%= nav_helper 'text-white', 'li' %>
-          <li><%= login_helper 'text-white' %></li>
-        </ul>
+<div class="pos-f-t">
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="container"><center>
+        <div class="row">
+          <div class="col-sm-8 py-4">
+            <h4 class="text-white">About</h4>
+            <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          </div>
+          <div class="col-sm-4 py-4 port">
+            <h4 class="text-white">Explore</h4>
+            <ul class="list-unstyled">
+                <%= nav_helper 'text-white', 'li' %>
+              <li><%= login_helper 'text-white' %></li>
+            </ul>
+          </div>
+        </div></center>
       </div>
     </div>
-  </div>
-</div>
-<div class="navbar navbar-inverse bg-inverse">
-  <div class="container d-flex justify-content-between">
-    <a href="#" class="navbar-brand">Zabrina Larson</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container d-flex justify-content-between">
+    <%= link_to 'Zabrina Larson', root_path, class: 'navbar-brand' %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
+      </button>
+    </div>
+  </nav>
 </div>
 
