--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -39,6 +39,76 @@ h6, .h6 {
   max-width: 40rem;
 }
 
+.cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.app-nav {
+  margin-left: 400px;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 2rem;
+}
+
+
+/*
+ * Header
+ */
+
+.masthead {
+  margin-bottom: 100px;
+  position: fixed;
+  top: 0;
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: bold;
+  color: black;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: gray;
+  border-bottom-color: gray;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+.links {
+  float: right;
+}
+
+.app-nav span {
+  margin-left: 15px;
+  margin-right: 15px;
+  float: right;
+}
+
 .album {
   min-height: 50rem; /* Can be removed; just added for demo purposes */
   padding-top: 3rem;
@@ -77,4 +147,14 @@ footer p {
 
 .portfolio-container {
   padding-top: 30px;
+}
+
+.nav {
+  color: black;
+  float: right;
+  margin-right: 50px;
+}
+
+.port {
+  float: right;
 }
