--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= location %>">
+<div class="<%= location %> links">
     <div><%= link_to "Home", root_path %></div>
     <div><%= link_to "About Me", about_path %></div>
     <div><%= link_to "Contact", contact_path %></div>
