--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -17,9 +17,12 @@
   </head>
 
   <body>
-    <%= render 'shared/portfolio_nav' %>
-    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
-
+    <div>
+      <%= render 'shared/portfolio_nav' %>
+    </div>
+    <div>
+      <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
+    </div>
 
     <%= yield %>
 
