--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -6,22 +6,24 @@
 
         <div class="row">
             <div class="col-md-6">
-                <h3>Address</h3>
+                <h3><u>Address</u></h3>
                 
-                <p>341 East 1500 South, Orem UT 84058</p>
+                <p>Orem Utah</p>
                 
-                <h3>Phone</h3>
+                <h3><u>Phone- Call or Text</u></h3>
                 
                 <p><%= number_to_phone "8015973165" %></p>
                 
-                <h3>Email</h3>
+                <h3><u>Email</u></h3>
                 
-                <p>zabrinalarson@gmail.com</p>
-                <p><a href="mailto:zabrinalarson@gmail.com?subject=Portfolio Contact" "email me">Email Me</a></p>
+                <p>zatisfy@gmail.com</p>
+                <p><a href="mailto:zatisfy@gmail.com?subject=Lets Work Together" "email me">Set up a Consultation</a></p>
+
+                <p class="contact-outline">Please include in your initial email a description of what you are looking for, your price range, and your time frame. We will set up a consultation from there. </p>
             </div>
             
             <div class="col-md-6">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.264870520242!2d-111.68873468521677!3d40.26986607248338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9a8a7b5953d1%3A0x909f94f91340d9e4!2s341+E+1500+S%2C+Orem%2C+UT+84058!5e0!3m2!1sen!2sus!4v1534044914824" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1xUFnD16eLN3yFo8bK3Xa1USTVzc&hl=en" width="450" height="480"></iframe>
             </div>
         </div>
     </div>
