--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,12 +23,13 @@
 		        </div>
 		    </div>
 		    <div class="col-md-8">
-		        <p>Find me in app/views/pages/about.html.erb"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-		        <p> other content "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		        <p>Hello,</p>
+		        <p>My name is Zabrina. I am a new freelance web application developer. Working to build my own buisness and work for myself I am dedicated to building my portfolio and knowledge in the process. I have worked in customer service for the past 6 years and for the past 2 I have worked Tech Support for a dental software with a focus on Imaging. Basically what I have taken from my experience and plan to do with my own buisness is provide quality websites for individuals while working within the constrainsts of their budget and time constraints. Eventually I plan to grow my buisness to include helping with marketing and helping my clients with their online presence.</p>
+		        <p>I promise to provide a quality website and open communication along the way. Help me build the website for your future while I build the portfolio for mine.</p>
 
 		        <p>
 		        	<button 
-		        		class="btn btn-primary"
+		        		class="btn btn-primary custom-about"
 		        		type="button"
 		        		data-toggle="collapse"
 		        		data-target="#jobHistory"
@@ -39,7 +40,7 @@
 		        	</button>
 
 		        	<button 
-		        		class="btn btn-primary"
+		        		class="btn btn-primary custom-about"
 		        		type="button"
 		        		data-toggle="collapse"
 		        		data-target="#education"
