--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -7,7 +7,8 @@
         </span>
 
         <span>
-        	<%= link_to "Topics", topics_path %>
+            <%= link_to "Topics", topics_path, class:"btn btn-lg blog-btn" %>
+            <%= link_to "Featured", blogs_path, class:"btn btn-lg blog-btn" %>
         </span>
     </div>
 </div>
