--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -338,3 +338,9 @@ h6, .h6 {
   font-family: 'Bree Serif';
   color: black;
 }
+
+.custom-about {
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+}
