--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -22,11 +22,14 @@ c<!DOCTYPE html>
       <%= render 'shared/blog_masthead' %>
     </div>
     <div class="container"> 
+      <div class="row">
     
-      <%= yield %>
+        <%= yield %>
     
-      <%= render 'shared/blog_sidebar' %>
+        <%= render 'shared/blog_sidebar' %>
+      </div>
     </div>
+    <div>
         
       <%= render 'shared/blog_footer' %>
       
