--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome to my website!</h1>
+  <p class="lead">Please look around and view the many aspects shown here in my portfolio alone. I've worked in customer service for years and the part of that that I will always carry with me is the ability to communicate and anticipate the needs of my client. If you need a website built for your buisness that fits your aspirations for an online presence and that fits your budget, lets get in contact and see what we can do for you. </p>
   <p class="lead">
     <%= link_to "About Me", about_path, class:"btn btn-lg coverbtn" %>
     <%= link_to "Lets Work Together", contact_path, class:"btn btn-lg coverbtn" %>
