--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
         </div>
       
         <div class="actions">
-          <%= f.submit "Send me reset password instructions", class: 'btn btn-danger btn-block' %>
+          <%= f.submit "Send me reset password instructions", class: 'btn btn-custom-bad btn-block' %>
         </div>
       <% end %>
       <div class="auth-links">
