--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,7 +191,8 @@ h6, .h6 {
 #edit-card {
   margin: 5% 15%;
   width: 80%;
-  padding: 25px 15px 30px 15px;
+  padding: 20px;
+  margin-top: 120px;
 }
 
 .card-block {
@@ -342,5 +343,29 @@ h6, .h6 {
 .custom-about {
   background-color: black;
   color: white;
+  border: 2px solid black;
+}
+
+.login > .card {
+  padding: 20px;
+}
+
+.custom-reg > .card {
+  padding: 20px;
+}
+
+.register-header {
+  text-align: center;
+}
+
+.btn-custom {
+  background-color: #008000;
+  color: black;
+  border: 2px solid black;
+}
+
+.btn-custom-bad {
+  background-color: #cc0000;
+  color: black;
   border: 2px solid black;
 }
