--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -21,7 +21,7 @@
         </div>
       
         <div class="actions">
-          <%= f.submit "Change my password", class: 'btn btn-success' %>
+          <%= f.submit "Change my password", class: 'btn btn-custom' %>
         </div>
       <% end %>
       <div class="auth-links">
