--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="card-block">
     <div class="row">
       <div class="col-md-8">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        <h2 class="register-header">Edit Account</h2>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
       
@@ -40,7 +40,7 @@
         </div>
       
         <div class="actions">
-          <%= f.submit "Update", class: 'btn btn-success' %>
+          <%= f.submit "Update", class: 'btn btn-custom' %>
         </div>
         <% end %>
       </div>
@@ -48,7 +48,7 @@
       <div class="col-md-4">
         <h3>Cancel my account</h3>
       
-        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Nooooo don't go! Are you sure?" }, method: :delete, class: 'btn btn-custom-bad' %></p>
       </div>
     </div>
     
