--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,51 @@
-<div class="card">
-  <div class="card-block">
-    <h2>Sign up</h2>
+<div class="custom-reg">
+  <div class="card">
+    <div class="card-block">
+      <h2 class="register-header">Sign up</h2>
     
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       
-      <div class="row">
+        <div class="row">
         
-        <div class="col-md-6">
-          <div class="form-group">
+          <div class="col-md-6">
+            <div class="form-group">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-          </div>
+            </div>
           
-          <div class="form-group">
+            <div class="form-group">
             <%= f.label :name %><br />
             <%= f.text_field :name, class: 'form-control' %>
+            </div>
           </div>
-        </div>
           
-        <div class="col-md-6">
-          <div class="form-group">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-          </div>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+            </div>
         
-          <div class="form-group">
+            <div class="form-group">
             <%= f.label :password_confirmation %><br />
             <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+            </div>
           </div>
-        </div>
         
-        <div class="col-md-10"></div>
-        <div class="col-md-2">
-          <div class="actions">
-            <%= f.submit "Sign up", class: 'btn btn-success btn-block' %>
-          </div>
-          <div class="auth-links register-text">
-            <%= render "devise/shared/links" %>
+          <div class="col-md-10"></div>
+          <div class="col-md-2">
+            <div class="actions">
+              <%= f.submit "Sign up", class: 'btn btn-custom btn-block' %>
+            </div>
+            <div class="auth-links register-text">
+              <%= render "devise/shared/links" %>
+            </div>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
