--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,8 +1,10 @@
 <div class="col-md-4">
-	<div class="card"  data-id="<%= portfolio_item.id %>">
-	    <%= image_tag portfoilo_img(portfolio_item.thumb_image, 'thumb'), width: '100%' %>
+	<div class="card port-cards"  data-id="<%= portfolio_item.id %>">
+	    <%= image_tag portfoilo_img(portfolio_item.thumb_image, 'thumb'), width: '100%', class: 'port-img' %>
+	    <h3 class="card-title port-titles"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%></h3>
+	    <hr>
 	    <p class="card-text">
-	        <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id)%></span> <%= portfolio_item.subtitle %>
+	        <%= portfolio_item.subtitle %>
 	    </p>
 	</div>
 </div>
