--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,30 +1,31 @@
 <div class="container portfolio-container">
     <div class="row">
         <div class="col-md-7">
-            <%= image_tag portfoilo_img(@portfolio_item.main_image, 'main'), width: '100%'  %>
+            <%= image_tag portfoilo_img(@portfolio_item.main_image, 'main'), width: '100%', class: 'port-img'  %>
         </div>
         
         <div class="col-md-5">
+            <div  class="card port-cards show-cards">
+                <h1><%= @portfolio_item.title %></h1>
             
-            <h1><%= @portfolio_item.title %></h1>
+                <hr>
+                <em><%= @portfolio_item.subtitle %></em>
+                <p><%= @portfolio_item.body %></p>
             
-            <hr>
-            <em><%= @portfolio_item.subtitle %></em>
-            <p><%= @portfolio_item.body %></p>
+                <hr>
             
-            <hr>
+                <h3>Technologies Used:</h3>
             
-            <h3>Technologies Used:</h3>
+                <% @portfolio_item.technologies.each do |t| %>
+                <p><%= t.name %></p>
+                <% end %>
             
-            <% @portfolio_item.technologies.each do |t| %>
-            <p><%= t.name %></p>
-            <% end %>
-            
-            <% if logged_in?(:site_admin) %>
-                <div>
-                    <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-success' %>
-                </div>
-            <% end %>
+                <% if logged_in?(:site_admin) %>
+                    <div>
+                        <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-success' %>
+                    </div>
+                <% end %>
+            </div>
         </div>
     </div>
 </div>
