--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,10 +1,10 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <p class="lead text-custom">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
     <p>
-      <%= link_to 'Find Out More About Me', about_path, class: 'btn btn-success' %>
-      <%= link_to 'My Blog', blogs_path, class: 'btn btn-secondary' %>
+      <%= link_to 'Start your Website!', about_path, class: 'btn btn-custom' %>
+      <%= link_to 'Check Out my Blog!', blogs_path, class: 'btn btn-custom' %>
     </p>
   </div>
 </section>
