--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -1,20 +1,20 @@
 <div class="pos-f-t">
   <nav class="navbar navbar-dark bg-dark">
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="container"><center>
+    <div class="collapse custom-nav" id="navbarToggleExternalContent">
+      <div class="container">
         <div class="row">
           <div class="col-sm-8 py-4">
             <h4 class="text-white">About</h4>
-            <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+            <p class="text-muted">This website is my portfolio, everything encountered here was built using Ruby on Rails and acts as an example of what I am capable of. Its hard to show EVERYTHING thats possible though so lets talk about your ideas and what we can do to bring them to life. </p>
           </div>
           <div class="col-sm-4 py-4 port">
-            <h4 class="text-white">Explore</h4>
+            <h4 class="text-white">More to Explore...</h4>
             <ul class="list-unstyled">
                 <%= nav_helper 'text-white', 'li' %>
               <li><%= login_helper 'text-white' %></li>
             </ul>
           </div>
-        </div></center>
+        </div>
       </div>
     </div>
     <div class="container d-flex justify-content-between">
