--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container portfolio-container">
     
-    <h1>Create a new Portfolio item</h1>
+    <h1 class="card new-card">Create a new Portfolio item</h1>
     
     <%= render 'form', portfolio_item: @portfolio_item %>
 </div>
