--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -22,7 +22,7 @@
             
                 <% if logged_in?(:site_admin) %>
                     <div>
-                        <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-success' %>
+                        <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-cus' %>
                     </div>
                 <% end %>
             </div>
