--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -6,14 +6,14 @@
 
     <%= source_helper("alert alert-info blog-sidebar-source") %>
 
-    <div class="sidebar-module">
+    <div class="sidebar-module sidebar-module-inset">
         <h4>Topics</h4>
         <% @side_bar_topics.each do |topic| %>
         <p><%= link_to topic.title, topic_path(topic) %></p>
         <% end %>
     </div>
 
-    <div class="sidebar-module sidebar-links">
+    <div class="sidebar-module sidebar-links sidebar-module-inset">
         <h4>Archives</h4> 
         <ol class="list-unstyled">
             <li><a href="#">March 2014</a></li>
@@ -31,7 +31,7 @@
         </ol>
     </div>
 
-    <div class="sidebar-module social-links sidebar-links">
+    <div class="sidebar-module social-links sidebar-links sidebar-module-inset">
         <h4>Elsewhere</h4>
         <ol class="list-unstyled">
             <li><a href="#"><%= fa_icon "github" %></a></li>
