--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -297,20 +297,22 @@ h6, .h6 {
 .package-button {
   color: #9c7c38;
   font-size: 300%;
-  border-radius: 10px; 
   background-color: #000000;
   border: 3px solid black;
+}
+
+.package-button a {
+  color: #e8d7a9 !important;
 }
 
 .package-body {
   font-family: 'Bree Serif';
   color: black;
-  background-color: #9c7c38;
 }
 
 .card-group  > .card {
   border-radius: 10px;
-  background-color: #000000;
+  background-color: #9c7c38e8;
 }
 
 .card-title {
@@ -326,7 +328,7 @@ h6, .h6 {
   border: 2px solid black;
   font-family: 'Bree Serif';
   color: black;
-  background-color: #9c7c38;
+  background-color: #9c7c38e8;
 }
 
 .contact-outline {
