--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
   <head>
     <meta charset="utf-8">
@@ -21,13 +21,14 @@
     <div>
       <%= render 'shared/blog_masthead' %>
     </div>
+    <%= image_tag 'goldbg.png', class: 'parabackground' %> 
     <div class="container"> 
       <div class="row">
     
         <%= yield %>
     
         <%= render 'shared/blog_sidebar' %>
-      </div>
+      </div> 
     </div>
     <div>
         
