--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -5,56 +5,60 @@
       <%= alert_generator error %>
     <% end %>
   <% end %>
-  
-  <div class="row">
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control' %>
-      </div>
 
-      <div class="form-group">
-        <%= f.label :subtitle %>
-        <%= f.text_field :subtitle, class: 'form-control' %>
-      </div>
+  <div class="card port-card-new">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <label class="btn btn-primary">
+        <div class="form-group">
+          <%= f.label :subtitle %>
+          <%= f.text_field :subtitle, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <label class="btn btn-cus">
           Upload a main image file <%= f.file_field :main_image, style: 'display:none;' %>
-        </label>
-      </div>
+          </label>
+        </div>
 
-      <div class="form-group">
-        <label class="btn btn-primary">
+        <div class="form-group">
+          <label class="btn btn-cus">
           Upload a thumb image file <%= f.file_field :thumb_image, style: 'display:none;' %>
-        </label>
+          </label>
+        </div>
       </div>
-    </div>
 
-    <div class="col-md-6">
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, class: 'form-control', rows: 13 %>
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= f.label :body %>
+          <%= f.text_area :body, class: 'form-control', rows: 13 %>
+        </div>
       </div>
     </div>
   </div>
 
   <hr>
 
-  <div class="col-md-12">
-    <h2>Technolgies Used:</h2>
-    <div>
-      <%= f.fields_for :technologies do |technology_form| %>
-        <%= render 'technology_fields', f: technology_form %>
-      <% end %>
-      
+  <div class="card port-card-new bottom-port">
+    <div class="col-md-12">
+      <h2>Technolgies Used:</h2>
       <div>
+        <%= f.fields_for :technologies do |technology_form| %>
+        <%= render 'technology_fields', f: technology_form %>
+        <% end %>
+      
+        <div>
         <%= link_to_add_association 'Add Technology', f, :technologies %>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <%= f.submit 'Save Portfolio Item', class: 'btn btn-success btn-block' %>
+      <div class="form-group">
+        <%= f.submit 'Save Portfolio Item', class: 'btn btn-cus btn-block' %>
+      </div>
     </div>
   </div>
 <% end %>
