--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container portfolio-container">
-    <h1>Edit this Portfolio Item</h1>
+    <h1 class="card new-card">Edit this Portfolio Item</h1>
 
     <%= render 'form', portfolio_item: @portfolio_item %>
 </div>
