--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,14 +1,14 @@
 <div class="blog-header">
     <div class="container">
-        <h1 class="blog-title">My Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <h1 class="blog-title text-custom">My Blog</h1>
+        <p class="lead blog-description text-custom">An example blog template built with Bootstrap.</p>
         <span>
-        	<%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>	
+        	<%= link_to 'Write a New Blog', new_blog_path, class:"btn btn-sm blog-btn" if logged_in?(:site_admin) %>	
         </span>
 
         <span>
-            <%= link_to "Topics", topics_path, class:"btn btn-lg blog-btn" %>
-            <%= link_to "Featured", blogs_path, class:"btn btn-lg blog-btn" %>
+            <%= link_to "Topics", topics_path, class:"btn btn-sm blog-btn" %>
+            <%= link_to "Featured", blogs_path, class:"btn btn-sm blog-btn" %>
         </span>
     </div>
 </div>
