--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="text-custom">
+<footer class="text-custom port-footer">
   <div class="container">
     <p class="float-right">
       <%= link_to "View All Portfolio Items", portfolios_path %> /
